--- a/core/.env
+++ b/core/.env
@@ -2,7 +2,7 @@ APP_NAME=flowdosi
 APP_ENV=local
 APP_KEY=base64:Uqfm/jNWmytNAz3NthRuLSxTpYw/sCXRLYgAT7GihJo=
 APP_DEBUG=true
-APP_URL=https://localhost:8080/script
+APP_URL=https://flowdosi.osc-fr1.scalingo.io/
 
 LUNO_KEY_ID=h6pu5uaxxwyv9
 LUNO_SECRET=-A6m9LCIuNKUGCdX1RIU_gYZWTJE8_MmQikWaGhNzu5E
